--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">RemindMe</string>
+    <string name="app_name">RemindMe Beta</string>
+    <string name="Search">seach_title</string>
 </resources>
