--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">RemindMe Beta</string>
-    <string name="Search">seach_title</string>
+    <string name="Search">Search</string>
+
+    <string name="menu_item_notification">Напоминания</string>
+
+    <string name="view_navigation_open">Open</string>
+    <string name="view_navigation_close">Close</string>
 </resources>
